# RubiksCube

./: .gitignore  README.md  README_CN.md  pyproject.toml
src/chat/: adb.py  chat_service.py  run.py
src/cube/: __init__.py  cube.py  typing.py
src/utils/: core.py
src/vision/: predict.py  train.py
src/web/: index.html
tests/: test_cube.py
